:recycle: fix z-index bug in card message and add title to container

--- a/bpop-hipotecario-lib-ds/src/atoms/checkbox/checkbox.module.css
+++ b/bpop-hipotecario-lib-ds/src/atoms/checkbox/checkbox.module.css
@@ -48,7 +48,7 @@
 .wrapper .checkmark .icon-check {
   display: none;
   color: #fff;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .wrapper.enabled:hover .input ~ .checkmark {
