--- a/bpop-hipotecario-lib-ds/src/atoms/tooltip/tooltip.module.css
+++ b/bpop-hipotecario-lib-ds/src/atoms/tooltip/tooltip.module.css
@@ -48,7 +48,7 @@
 
 .icon-close {
   color: #fff;
-  font-size: 32px;
+  font-size: 2rem;
 }
 
 .content-text {
